--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -1,6 +1,8 @@
 .footer
     background: $dark url('../img/footer-bg.jpg') no-repeat center / cover
     padding-top: 3rem
+    .policy__label 
+        margin-left: -1.6rem
     &__wrap
         background-color: $black
         max-width: 63.07rem
