--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -4,6 +4,7 @@
     border-radius: 2px
     text-transform: uppercase
     font-size: 0.93rem
+    outline: none
     &:hover
         cursor: pointer
 
@@ -33,6 +34,7 @@
     font-size: 1.285rem
     color: $light
     padding: 0.5rem 0
+    outline: none
     &::placeholder
         color: $light
     &.invalid
@@ -57,6 +59,9 @@
             border-radius: 1px
             cursor: pointer
             margin-right: 0.64rem
+        &--center
+            justify-content: center
+            font-size: 1.1428rem
 
 label
     &.invalid
