--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -1,14 +1,14 @@
 .footer
     background: $dark url('../img/footer-bg.jpg') no-repeat center / cover
-    padding-top: 3rem
+    padding: 3rem 0 0
     .policy__label 
         margin-left: -1.6rem
     &__wrap
         background-color: $black
         max-width: 63.07rem
         margin: auto
-        margin-top: -20rem
-        margin-bottom: 3.71rem
+        margin-top: -19rem
+        margin-bottom: 3.51rem
         padding: 2.5rem
     &__title
         text-transform: uppercase
@@ -39,16 +39,13 @@
     &__policy
         flex-basis: 100%
         margin-bottom: 3.5rem
+        margin-top: 0.4rem
     &__button
         margin: auto
         padding: 1.285rem 4.785rem
     &__menu
         background-color: $dark
-        padding: 4.285rem 0
-    .contacts
-        text-align: center
-        margin-top: 3.71rem
-        margin-bottom: 3.14rem
+        padding: 3.429rem 0
         &__desc
             margin: auto
             font-family: 'Yeseva One', cursive
@@ -74,6 +71,38 @@
                 
             &:last-child
                 background: $primary url('../img/inst.svg') no-repeat center
+    &__after
+        &__title
+            position: relative
+            font-family: 'Yeseva One', cursive
+            text-transform: uppercase
+            font-size: 1.429rem
+            line-height: 2rem
+            text-align: center
+            color: $primary
+            max-width: 35.714rem
+            margin: auto auto 6.929rem
+            font-weight: normal
+            &::after
+                content: ''
+                position: absolute
+                top: 5.6rem
+                left: 18.3rem
+                width: 28px
+                height: 28px
+                background: $primary url(../img/instagram.png) no-repeat center
+                border-radius: 100%
+                cursor: pointer
+            &::before
+                content: ''
+                position: absolute
+                top: 5.6rem
+                left: 15.2rem
+                width: 28px
+                height: 28px
+                background: $primary url(../img/message.png) no-repeat center
+                border-radius: 100%
+                cursor: pointer
     &__map
         margin: auto
         max-width: 925px
