feat: add gulp plagins to compress code in project/dest files

--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -6,7 +6,7 @@
     url('FuturaBookC.ttf') format('truetype');
     font-weight: 300px;
     font-style: normal;
-    font-display: wrap;
+    font-display: swap;
     }
 
 @font-face {
@@ -17,5 +17,5 @@
     url('FuturaDemiC.ttf') format('truetype');
     font-weight: 300px;
     font-style: normal;
-    font-display: wrap;
+    font-display: swap;
     }    
