--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,14 @@
   src: url("../fonts/futura/FuturaBookC.woff") format("woff"), url("../fonts/futura/FuturaBookC.woff2") format("woff2"), url("FuturaBookC.ttf") format("truetype");
   font-weight: 300px;
   font-style: normal;
-  font-display: wrap;
+  font-display: swap;
 }
 @font-face {
   font-family: "Futura Demi C";
   src: url("../fonts/futura/FuturaDemiC.woff") format("woff"), url("../fonts/futura/FuturaDemiC.woff2") format("woff2"), url("FuturaDemiC.ttf") format("truetype");
   font-weight: 300px;
   font-style: normal;
-  font-display: wrap;
+  font-display: swap;
 }
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
