--- a/css/style.css
+++ b/css/style.css
@@ -960,6 +960,85 @@ img {
   height: 421px;
 }
 
+.plan__ul {
+  background: url("../img/plan.png") no-repeat left;
+  min-height: 49.43rem;
+  max-width: 780px;
+  width: 100%;
+  margin-right: 4rem;
+}
+.plan__ul__text {
+  font-size: 1.286rem;
+  line-height: 1.5rem;
+  max-width: 26rem;
+}
+.plan__ul__text:nth-of-type(1) {
+  margin-top: 7.3rem;
+  margin-left: 29.5rem;
+}
+.plan__ul__text:nth-of-type(2) {
+  margin-top: 5rem;
+  margin-left: 35rem;
+}
+.plan__ul__text:nth-of-type(3) {
+  margin-top: 9.5rem;
+  margin-left: 36.5rem;
+}
+.plan__ul__text:nth-of-type(4) {
+  max-width: 18.286rem;
+  margin-top: 8.5rem;
+  margin-left: 32rem;
+}
+.plan-form {
+  background-color: #131313;
+  padding: 2rem 3.5rem;
+  margin-top: 7.7rem;
+}
+.plan-form__title {
+  font-family: "Futura Demi", cursive;
+  font-weight: 500;
+  font-size: 1.43rem;
+  line-height: 1.786rem;
+  text-align: center;
+  margin: auto;
+  color: #fff;
+  max-width: 21.214rem;
+  margin-bottom: 2.857rem;
+}
+.plan-form .policy__label {
+  color: #fff;
+}
+.plan-form .button {
+  align-self: flex-end;
+  font-size: 0.92rem;
+  padding: 20px 40px;
+}
+.plan-form .modal__input-group {
+  margin-bottom: 2.1rem;
+}
+.plan-form .email_input {
+  margin-bottom: -1rem;
+}
+
+.discounts-container {
+  display: flex;
+  justify-content: flex-end;
+}
+.discounts-container .discounts {
+  display: flex;
+  justify-content: space-between;
+  max-width: 29.643rem;
+  width: 100%;
+  margin-top: -2.5rem;
+  margin-right: 4rem;
+}
+.discounts-container .discounts__text {
+  font-family: "Futura Demi", cursive;
+  font-size: 1.429rem;
+  line-height: 1.786rem;
+  color: #E3B873;
+}
+
 .steps {
   margin-top: -36.57rem;
   padding-top: 30.57rem;
