--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,6 +9,7 @@
 @import 'templates/projects'
 @import 'templates/control'
 @import 'templates/types'
+@import 'templates/plan'
 @import 'templates/steps'
 @import 'templates/team'
 @import 'templates/feedback'
