--- a/css/style.css
+++ b/css/style.css
@@ -503,6 +503,8 @@ label.invalid {
 
 *, *:before, *:after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -960,10 +962,13 @@ img {
   height: 421px;
 }
 
+.plan {
+  padding-bottom: 200px;
+}
 .plan__ul {
   background: url("../img/plan.png") no-repeat left;
   min-height: 49.43rem;
-  max-width: 780px;
+  max-width: 750px;
   width: 100%;
   margin-right: 4rem;
 }
@@ -989,13 +994,27 @@ img {
   margin-top: 8.5rem;
   margin-left: 32rem;
 }
-.plan-form {
-  background-color: #131313;
+.plan__block {
+  max-width: 36.142rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.plan__block__form {
+  display: flex;
+  flex-direction: column;
+}
+.plan__block-form {
+  position: relative;
+  max-width: 36.36rem;
+  background: #131313 url("../img/bg-liness.svg") no-repeat center;
+  color: #fff;
   padding: 2rem 3.5rem;
   margin-top: 7.7rem;
+  margin-bottom: 3.5rem;
 }
-.plan-form__title {
-  font-family: "Futura Demi", cursive;
+.plan__block-form__title {
+  font-family: "Futura Demi";
   font-weight: 500;
   font-size: 1.43rem;
   line-height: 1.786rem;
@@ -1005,18 +1024,24 @@ img {
   max-width: 21.214rem;
   margin-bottom: 2.857rem;
 }
-.plan-form .policy__label {
+.plan__block__input-group {
+  margin-bottom: 3.428rem;
+  display: flex;
+  flex-direction: column;
+}
+.plan__block__input-group:last-of-type {
+  margin-bottom: 1rem;
+}
+.plan__block__policy {
+  margin-bottom: 2.7rem;
   color: #fff;
 }
-.plan-form .button {
+.plan__block__button {
   align-self: flex-end;
   font-size: 0.92rem;
   padding: 20px 40px;
 }
-.plan-form .modal__input-group {
-  margin-bottom: 2.1rem;
-}
-.plan-form .email_input {
+.plan__block__button .email_input {
   margin-bottom: -1rem;
 }
 
@@ -1032,11 +1057,93 @@ img {
   margin-top: -2.5rem;
   margin-right: 4rem;
 }
+.discounts-container .discounts__econom {
+  background: #E3B873;
+  max-width: 72px;
+  width: 100%;
+  border-radius: 100%;
+  min-height: 72px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.discounts-container .discounts__econom__img {
+  max-width: 40px;
+  width: 100%;
+  min-height: 33px;
+}
 .discounts-container .discounts__text {
   font-family: "Futura Demi", cursive;
   font-size: 1.429rem;
   line-height: 1.786rem;
   color: #E3B873;
+  margin-left: 0.7rem;
+  margin-top: 0.8rem;
+}
+
+.styles {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: url("../img/webp/styles-bg.webp") no-repeat center/cover;
+  padding-top: 8rem;
+  padding-bottom: 5.142rem;
+  margin-bottom: 8rem;
+}
+.styles .container {
+  z-index: 3;
+}
+.styles::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(19, 19, 19, 0.7);
+}
+.styles .section-title__heading {
+  font-size: 1.93rem;
+  line-height: 2.643rem;
+  max-width: 29.357rem;
+  margin-bottom: 2.5rem;
+}
+.styles .section-title__img {
+  display: none;
+}
+.styles-list__item {
+  list-style-type: none;
+  font-size: 1.428rem;
+  line-height: 172.4%;
+  color: #fff;
+  margin-bottom: 1rem;
+}
+.styles-list__item:hover {
+  color: #E3B873;
+  text-decoration: underline;
+}
+.styles .col {
+  display: flex;
+  flex-direction: column;
+}
+.styles .col .col-1 {
+  position: absolute;
+  top: -5%;
+  right: 34%;
+  margin-right: 3.07rem;
+}
+.styles .col .col-2 {
+  position: absolute;
+  top: -13%;
+  right: 16%;
+  padding-bottom: 5.714rem;
+}
+.styles-img {
+  max-width: 25.286rem;
+}
+.styles-img:first-of-type {
+  margin-bottom: 2.857rem;
 }
 
 .steps {
@@ -1533,6 +1640,24 @@ img {
   .nav__item {
     margin-right: 1rem;
   }
+
+  .styles-img {
+    max-width: 20rem;
+  }
+  .styles .col .col-1 {
+    top: 5%;
+  }
+  .styles .col .col-2 {
+    top: -2%;
+  }
+
+  .step-img {
+    height: auto;
+  }
+
+  .steps__swiper:nth-child(2) {
+    max-width: 50rem;
+  }
 }
 @media screen and (max-width: 992px) {
   .nav {
@@ -1545,8 +1670,74 @@ img {
   .hero__content {
     margin-left: 0;
   }
+
+  .steps__swiper:nth-child(2) {
+    display: none;
+  }
+
+  .plan {
+    padding-bottom: 2rem;
+  }
+  .plan .row {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .styles {
+    margin-bottom: 0;
+  }
+  .styles-img {
+    max-width: 17rem;
+  }
+  .styles .col .col-1 {
+    display: none;
+  }
+  .styles .col .col-2 {
+    display: none;
+  }
+
+  .projects .container .row .col-50 .section-title .section-title__text {
+    max-width: 26rem;
+  }
+
+  .feedback .container .row {
+    flex-wrap: wrap;
+  }
+  .feedback .container .row .col {
+    flex-basis: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 2rem;
+  }
+
+  .types .container .row {
+    flex-wrap: wrap;
+  }
+  .types .container .col-30 {
+    flex-basis: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 2.5rem;
+  }
+
+  .scroll__block {
+    display: none;
+  }
 }
 @media screen and (max-width: 760px) {
+  .section {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .plan {
+    display: none;
+  }
+
   .row {
     flex-direction: column;
     align-items: center;
@@ -1559,8 +1750,102 @@ img {
   .card__text {
     margin-left: 0;
   }
+
+  .projects .row {
+    align-items: flex-start;
+  }
+  .projects .row .col-50:nth-child(2) .swiper {
+    display: none;
+  }
+
+  .types1 {
+    background: #131313;
+    color: #fff;
+  }
+
+  .team {
+    background: #131313;
+    padding-top: 35rem;
+  }
+  .team .col {
+    margin-bottom: 3.5rem;
+  }
+
+  .styles {
+    display: none;
+    background: #fff;
+  }
+  .styles::before {
+    display: none;
+  }
+  .styles .container {
+    background: url(../img/webp/styles-bg.webp) no-repeat center/cover;
+    min-height: 15rem;
+  }
+  .styles .row {
+    display: none;
+  }
+
+  .steps {
+    display: none;
+  }
+
+  .feedback {
+    display: none;
+  }
 }
 @media screen and (max-width: 570px) {
+  .container {
+    width: 90%;
+  }
+
+  .projects .row {
+    align-items: flex-start;
+  }
+  .projects .row .col-50 {
+    width: 100%;
+  }
+  .projects .row .col-50:nth-child(1) .swiper {
+    margin: auto;
+  }
+  .projects .row .col-50:nth-child(2) .swiper {
+    display: block;
+    width: 90%;
+    margin: auto;
+  }
+
+  .control {
+    background: #131313;
+    color: #fff;
+  }
+  .control__policy {
+    order: 2;
+    margin-bottom: 1.5rem;
+    margin-left: 0;
+  }
+  .control__form {
+    flex-wrap: wrap;
+  }
+  .control__input-group {
+    flex-basis: 100%;
+    margin-bottom: 2rem;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+  }
+  .control__button {
+    width: 100%;
+    order: 3;
+  }
+  .control__input {
+    color: #fff;
+  }
+  .control__label {
+    color: #fff;
+  }
+
+  .footer {
+    background: #131313;
+  }
+
   .contacts__phone {
     margin-right: 0;
     color: #fff;
@@ -1574,6 +1859,10 @@ img {
     font-size: 1.64rem;
   }
 
+  .hero {
+    padding-bottom: 10px;
+    padding-top: 40px;
+  }
   .hero__scroll-down {
     display: none;
   }
@@ -1590,8 +1879,23 @@ img {
     margin-bottom: 1.85rem;
   }
 }
-@media screen and (max-height: 520px) {
+@media screen and (max-width: 375px) {
   .hero__scroll-down {
     display: none;
+  }
+
+  .footer {
+    padding-bottom: 2rem;
+  }
+  .footer__menu {
+    display: none;
+  }
+  .footer__after__title::after {
+    left: 14.3rem;
+    top: 7rem;
+  }
+  .footer__after__title::before {
+    left: 11.3rem;
+    top: 7rem;
   }
 }
