--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,7 @@
 @import 'templates/control'
 @import 'templates/types'
 @import 'templates/plan'
+@import 'templates/styles'
 @import 'templates/steps'
 @import 'templates/team'
 @import 'templates/feedback'
