--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -5,13 +5,14 @@
         &__item
             margin-right: 1rem
     .styles
+        &__col
+            &__l
+                margin-top: 3rem
         &-img
             max-width: 20rem
         .col
             .col-1
-                top: 5%
-            .col-2
-                top: -2%
+                margin-top: -1rem
     .step
         &-img
             height: auto
@@ -19,6 +20,14 @@
         &__swiper
             &:nth-child(2)
                 max-width: 50rem
+    .plan__ul__text:nth-of-type(1) 
+        margin-top: 9rem
+        margin-left: 27rem
+    .plan__ul__text:nth-of-type(2) 
+        margin-top: 5.5rem
+    .plan__ul__text:nth-of-type(4) 
+        margin-top: 11rem
+        margin-left: 29rem
 @media screen and ( max-width: 992px )
     .nav
         display: none
@@ -27,24 +36,23 @@
             display: none
         &__content
             margin-left: 0
+            margin-bottom: 8rem
     .steps
-        &__swiper
-            &:nth-child(2)
-                display: none
+        display: none
     .plan
         padding-bottom: 2rem
         .row
             flex-wrap: wrap
             justify-content: center
     .styles
+        &__col
+            .row
+                margin-top: 7rem
+            &__l
+                margin-top: 3rem
         margin-bottom: 0
         &-img
             max-width: 17rem
-        .col
-            .col-1
-                display: none
-            .col-2
-                display: none
     .projects
         .container
             .row
@@ -96,11 +104,9 @@
             margin-left: 0
     .projects
             .row
+                flex-direction: column
                 align-items: flex-start
-                .col-50
-                    &:nth-child(2)
-                        .swiper
-                            display: none
+                justify-content: flex-start
     .types1
         background: $dark
         color: $light
@@ -177,6 +183,7 @@
             display: none
         &__content
             max-width: 22.86rem
+            margin-top: 5rem
         &__text
             font-size: 1.29rem
             margin-bottom: 2.28rem
@@ -185,6 +192,17 @@
             min-width: 22.86rem
             margin-bottom: 1.85rem
 @media screen and ( max-width: 375px )
+    .projects
+        .row
+            .col-50
+                margin: 0
+                width: 100%
+                &:nth-child(2)
+                    .swiper
+                        width: 100%
+    .control
+        &__video
+            min-height: 20rem
     .hero
         &__scroll-down
             display: none
