--- a/sass/templates/_feedback.sass
+++ b/sass/templates/_feedback.sass
@@ -1,6 +1,7 @@
 .feedback
     padding-top: 0
     padding-bottom: 25.286rem
+    background: $light url(../img/feedback-bg.png) no-repeat bottom left
     .container
         max-width: 88.2857rem
     .section
@@ -40,7 +41,7 @@
         align-items: center
         background: $primary
         border-right: 0.75px solid $light
-        padding: 0 1.6rem 0 1.1rem
+        padding: 1rem 1.6rem 1rem 1.1rem
         box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04)
         .feedback__text
             text-transform: uppercase     
